--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         Pricing
         Login
 
-        New
-        Monograph Dashboard
+        <p class="subtitle subtitle--accent">New</p>
+        <p class="subtitle">Monograph Dashboard</p>
 
-        Powerful insights into your team
-        Project planning and time tracking for agile teams
+        <h1 class="heading-1">Powerful insights into your team</h1>
+        <p>
+            Project planning and time tracking for agile teams
+        </p>
 
-        Schedule a demo
-        to see a live preview
+        <a href="#">Schedule a demo</a>
+        <p class="subtitle subtitle--sm">to see a live preview</p>
     </body>
 </html>
