--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Project planning and time tracking for agile teams
         </p>
 
-        <a href="#">Schedule a demo</a>
+        <a href="#" class="btn">Schedule a demo</a>
         <p class="subtitle subtitle--sm">to see a live preview</p>
     </body>
 </html>
