--- a/index.html
+++ b/index.html
@@ -17,16 +17,27 @@
         Features
         Pricing
         Login
+        <main>
+            <section class="intro">
+                <img src="./images/illustration-devices.svg" alt="" class="intro__illustration">
 
-        <p class="subtitle subtitle--accent">New</p>
-        <p class="subtitle">Monograph Dashboard</p>
-
-        <h1 class="heading-1">Powerful insights into your team</h1>
-        <p>
-            Project planning and time tracking for agile teams
-        </p>
-
-        <a href="#" class="btn">Schedule a demo</a>
-        <p class="subtitle subtitle--sm">to see a live preview</p>
+                <div class="intro__content">
+                    <div class="intro__subtitle">
+                        <p class="subtitle subtitle--accent">New</p>
+                        <p class="subtitle">Monograph Dashboard</p>
+                    </div>
+                    
+                    <h1 class="heading-1 intro__title">Powerful insights into your team</h1>
+                    <p class="intro__text">
+                        Project planning and time tracking for agile teams
+                    </p>
+                    
+                    <div class="intro__cta">
+                        <a href="#" class="btn">Schedule a demo</a>
+                        <p class="subtitle subtitle--sm">to see a live preview</p>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
