add style for main section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         
                         <div class="intro__cta">
                             <a href="#" class="btn">Schedule a demo</a>
-                            <p class="subtitle subtitle--sm">to see a live preview</p>
+                            <p class="subtitle subtitle--sm">to see a preview</p>
                         </div>
                     </div>
                 </section>
