--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
     <body>
         <div class="container">
             <header class="header">
-                <!-- Product
-                Features
-                Pricing
-                Login -->
+                <img src="./images/logo.svg" alt="Logo" class="header__logo">
+                <div class="header__nav-icon" aria-label="Menu open or close button"></div>
+                <nav class="nav-bar hidden">
+                    <ul class="nav-bar__links">
+                        <li><a href="#" class="nav-bar__link">Product</a></li>
+                        <li><a href="#" class="nav-bar__link">Features</a></li>
+                        <li><a href="#" class="nav-bar__link">Pricing</a></li>
+                        <li class="nav-bar__separator"></li>
+                        <li><a href="#" class="nav-bar__link nav-bar__link--login">Login</a></li>
+                    </ul>
+                </nav>
             </header>
 
             <main>
@@ -44,5 +51,6 @@
                 </section>
             </main>
         </div>
+        <script type="module" src="./js/script.js"></script>
     </body>
 </html>
