fix issue with accessibility with menu button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <header class="header">
                 <img src="./images/logo.svg" alt="Logo" class="header__logo">
-                <div class="header__nav-icon" aria-label="Menu open or close button"></div>
+                <div class="header__nav-icon" role="button" aria-label="Menu open or close button"></div>
                 <nav class="nav-bar hidden">
                     <ul class="nav-bar__links">
                         <li><a href="#" class="nav-bar__link">Product</a></li>
